[project]
name = "plotly-dash-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "Naoki",email = "like.no.other.1946@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash (>=3.0.4,<4.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dash-core-components (>=2.0.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "plotly_dash_testing", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
